tests/NormalTests/paczka1/fuzzy1/60267868.err
Error in line 17: lhsDX4LyU A34 26,2
Error in line 26: lhsDX4LyU S24 -4,7
Error in line 1: Fk6zolqwBMZ A34 34,7
Error in line 16: S1W7rYbBHOy S24 41,4
Error in line 19: lhsDX4LyU S24 54,2
Error in line 33: S1W7rYbBHOy S69 2,8
